fix checkbox alignment bug in selection column in timeline

--- a/src/vars.scss
+++ b/src/vars.scss
@@ -326,7 +326,7 @@ $dialog-anim-ease: cubic-bezier(0.09, 0.31, 0.28, 0.99);
     flex-shrink: 0;
 
     &.selection {
-      width: 21px;
+      width: 23px;
       // padding: 0;
     }
 
